--- a/cmd/frontend/internal/app/templates/ui2/shared/base.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/base.html
@@ -8,7 +8,9 @@
 	<link rel="stylesheet" href="{{.AssetURL}}/scripts/ui/assets/dist/style.bundle.css?v4">
 	<!-- Start of Telligent scripts -->
 	<script ignore-csp>
-		;(function(t,r,a,c,k,e,d){if(!t[k]){t.GlobalTelligentNamespace=t.GlobalTelligentNamespace||[];t.GlobalTelligentNamespace.push(k);t[k]=function(){(t[k].q=t[k].q||[]).push(arguments)};t[k].q=t[k].q||[];e=r.createElement(a);d=r.getElementsByTagName(a)[0];e.async=1;e.src=c;d.parentNode.insertBefore(e,d)}}(window,document,"script","https://storage.googleapis.com/telligent-artifacts/tracker/tel.js","telligent"));
+		;(function(t,r,a,c,k,e,d){if(!t[k]){t.GlobalTelligentNamespace=t.GlobalTelligentNamespace||[];t.GlobalTelligentNamespace.push(k);t[k]=function(){(t[k].q=t[k].q||[]).push(arguments)};t[k].q=t[k].q||[];e=r.createElement(a);d=r.getElementsByTagName(a)[0];e.async=1;e.src=c;d.parentNode.insertBefore(e,d)}}(window,document,"script",
+"https://storage.googleapis.com/telligent-artifacts/tracker/tel.js",
+"telligent"));
 	</script>
 	<!-- End of Telligent scripts-->
 	<script>
@@ -19,32 +21,34 @@
 
 <body>
 	<div id="nav">
-		<div class="header">
-			<!-- Logo -->
-			<a href="/"><img class="spin" src="{{.AssetURL}}/img/sourcegraph-mark.svg" width="24" /></a>
+		<div id="navbar">
+			<div class="header">
+				<!-- Logo -->
+				<a href="/"><img class="spin" src="{{.AssetURL}}/img/sourcegraph-mark.svg" width="24" /></a>
 
-			<!-- Search -->
-			{{if ne .Route "home"}}
-			<span class="search">
-					<span class="icon">
-						<svg height="12" width="12">
-						<path fill="#93A9C8" xmlns="http://www.w3.org/2000/svg" id="path6_fill" d="M 4.75021 4.65905e-06C 7.36999 -0.00361534 9.49666 2.1172 9.50026 4.73698C 9.50166 5.7595 9.17264 6.7551 8.5622 7.5754L 11.1265 9.74432C 11.5382 10.0957 11.5872 10.7144 11.2358 11.1261C 10.8844 11.5379 10.2657 11.5868 9.85399 11.2355C 9.81473 11.202 9.77819 11.1654 9.74467 11.1261L 7.5752 8.56228C 5.46856 10.1236 2.49507 9.68156 0.933725 7.5749C -0.627615 5.46824 -0.185555 2.49476 1.92111 0.933425C 2.73957 0.326825 3.73145 -0.000435341 4.75021 4.65905e-06ZM 4.75021 8.5C 6.82127 8.5 8.5002 6.82106 8.5002 4.75C 8.5002 2.67894 6.82127 1 4.75021 1C 2.67915 1 1.00021 2.67894 1.00021 4.75C 1.00023 6.82106 2.67915 8.49998 4.75021 8.49998L 4.75021 8.5Z"/>
-						</svg>
-					</span>
-			<input id="search-input" type="text" placeholder="Search...">
-			</span>
-			{{end}}
+				<!-- Search -->
+				{{if ne .Route "home"}}
+				<span class="search">
+						<span class="icon">
+							<svg height="12" width="12">
+							<path fill="#93A9C8" xmlns="http://www.w3.org/2000/svg" id="path6_fill" d="M 4.75021 4.65905e-06C 7.36999 -0.00361534 9.49666 2.1172 9.50026 4.73698C 9.50166 5.7595 9.17264 6.7551 8.5622 7.5754L 11.1265 9.74432C 11.5382 10.0957 11.5872 10.7144 11.2358 11.1261C 10.8844 11.5379 10.2657 11.5868 9.85399 11.2355C 9.81473 11.202 9.77819 11.1654 9.74467 11.1261L 7.5752 8.56228C 5.46856 10.1236 2.49507 9.68156 0.933725 7.5749C -0.627615 5.46824 -0.185555 2.49476 1.92111 0.933425C 2.73957 0.326825 3.73145 -0.000435341 4.75021 4.65905e-06ZM 4.75021 8.5C 6.82127 8.5 8.5002 6.82106 8.5002 4.75C 8.5002 2.67894 6.82127 1 4.75021 1C 2.67915 1 1.00021 2.67894 1.00021 4.75C 1.00023 6.82106 2.67915 8.49998 4.75021 8.49998L 4.75021 8.5Z"/>
+							</svg>
+						</span>
+				<input id="search-input" type="text" placeholder="Search...">
+				</span>
+				{{end}}
 
-			<span class="fill"> </span>
+				<span class="fill"> </span>
 
-			{{if eq .Route "blob"}}
-			<a href="src-insiders:open?resource=repo://{{.Repo.URI}}/{{.BlobView.Path}}" class="open-on-desktop">
-				<span>Open on desktop</span>
-				<svg class="icon" width="11px" height="9px"><path fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg" id="path10_fill" d="M 6.325 8.4C 6.125 8.575 5.8 8.55 5.625 8.325C 5.55 8.25 5.5 8.125 5.5 8L 5.5 6C 2.95 6 1.4 6.875 0.825 8.7C 0.775 8.875 0.6 9 0.425 9C 0.2 9 -4.44089e-16 8.8 -4.44089e-16 8.575C -4.44089e-16 8.575 -4.44089e-16 8.575 -4.44089e-16 8.55C 0.125 4.825 1.925 2.675 5.5 2.5L 5.5 0.5C 5.5 0.225 5.725 8.88178e-16 6 8.88178e-16C 6.125 8.88178e-16 6.225 0.05 6.325 0.125L 10.825 3.875C 11.025 4.05 11.075 4.375 10.9 4.575C 10.875 4.6 10.85 4.625 10.825 4.65L 6.325 8.4Z"/></svg>
-			</a>
-			{{end}}
+				{{if eq .Route "blob"}}
+				<a href="src-insiders:open?resource=repo://{{.Repo.URI}}/{{.BlobView.Path}}" class="open-on-desktop">
+					<span>Open on desktop</span>
+					<svg class="icon" width="11px" height="9px"><path fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg" id="path10_fill" d="M 6.325 8.4C 6.125 8.575 5.8 8.55 5.625 8.325C 5.55 8.25 5.5 8.125 5.5 8L 5.5 6C 2.95 6 1.4 6.875 0.825 8.7C 0.775 8.875 0.6 9 0.425 9C 0.2 9 -4.44089e-16 8.8 -4.44089e-16 8.575C -4.44089e-16 8.575 -4.44089e-16 8.575 -4.44089e-16 8.55C 0.125 4.825 1.925 2.675 5.5 2.5L 5.5 0.5C 5.5 0.225 5.725 8.88178e-16 6 8.88178e-16C 6.125 8.88178e-16 6.225 0.05 6.325 0.125L 10.825 3.875C 11.025 4.05 11.075 4.375 10.9 4.575C 10.875 4.6 10.85 4.625 10.825 4.65L 6.325 8.4Z"/></svg>
+				</a>
+				{{end}}
+			</div>
+			<div id="advanced-search"></div>
 		</div>
-		<div id="advanced-search"></div>
 	</div>
 	<script src="{{.AssetURL}}/scripts/app.bundle.js?v12"></script>
 	<div id="app-container">
