--- a/cmd/frontend/internal/app/templates/ui2/shared/blobview.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/blobview.html
@@ -1,8 +1,8 @@
 <div class="blobview">
-	<div id="tree-blob-container">
-		<div id="tree-viewer"></div>
+	<div id="tree-viewer"></div>
+	<div id="blob-container">
 		<div id="blob">{{.File}}</div>
 		<div id="blob-table"></div>
+		<div id="ref-widget"></div>
 	</div>
-	<div id="ref-widget" />
 </div>
