--- a/cmd/frontend/internal/app/templates/ui2/shared/navbar.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/navbar.html
@@ -1,10 +1,10 @@
 <div class="navbar">
-	<a href="#" id="navigation" class="navigation">
+	<span id="file-explorer">
 		<svg class="group-icon">
 			<path fill="#FFFFFF" xmlns="http://www.w3.org/2000/svg" id="path4_fill" d="M 8.5 8.75L 3 8.75C 2.725 8.75 2.5 8.525 2.5 8.25C 2.5 7.975 2.725 7.75 3 7.75L 8.5 7.75C 8.775 7.75 9 7.975 9 8.25C 9 8.525 8.775 8.75 8.5 8.75ZM 8.5 6.25L 3 6.25C 2.725 6.25 2.5 6.025 2.5 5.75C 2.5 5.475 2.725 5.25 3 5.25L 8.5 5.25C 8.775 5.25 9 5.475 9 5.75C 9 6.025 8.775 6.25 8.5 6.25ZM 8.5 3.75L 3 3.75C 2.725 3.75 2.5 3.525 2.5 3.25C 2.5 2.975 2.725 2.75 3 2.75L 8.5 2.75C 8.775 2.75 9 2.975 9 3.25C 9 3.525 8.775 3.75 8.5 3.75ZM 8.5 1.25L 3 1.25C 2.725 1.25 2.5 1.025 2.5 0.75C 2.5 0.475 2.725 0.25 3 0.25L 8.5 0.25C 8.775 0.25 9 0.475 9 0.75C 9 1.025 8.775 1.25 8.5 1.25ZM 0 3C 0 2.725 0.225 2.5 0.5 2.5L 1 2.5C 1.275 2.5 1.5 2.725 1.5 3L 1.5 3.5C 1.5 3.775 1.275 4 1 4L 0.5 4C 0.225 4 0 3.775 0 3.5L 0 3ZM 0.5 7.5L 1 7.5C 1.275 7.5 1.5 7.725 1.5 8L 1.5 8.5C 1.5 8.775 1.275 9 1 9L 0.5 9C 0.225 9 0 8.775 0 8.5L 0 8C 0 7.725 0.225 7.5 0.5 7.5ZM 0 5.5C 0 5.225 0.225 5 0.5 5L 1 5C 1.275 5 1.5 5.225 1.5 5.5L 1.5 6C 1.5 6.275 1.275 6.5 1 6.5L 0.5 6.5C 0.225 6.5 0 6.275 0 6L 0 5.5ZM 1.5 1C 1.5 1.275 1.275 1.5 1 1.5L 0.5 1.5C 0.225 1.5 0 1.275 0 1L 0 0.5C 0 0.225 0.225 0 0.5 0L 1 0C 1.275 0 1.5 0.225 1.5 0.5L 1.5 1Z"/>
 		</svg>
 		Navigation
-	</a>
+	</span>
 	<span class="path">
 		<a href="{{.RepoURL}}" class="book-link">
 			<svg class="book-icon">
