--- a/cmd/frontend/internal/app/templates/ui2/tree.html
+++ b/cmd/frontend/internal/app/templates/ui2/tree.html
@@ -3,7 +3,7 @@
 {{define "Body"}}
 <div class="tree">
 	{{template "navbar.html" .Navbar}}
-	{{template "treeview.html" .TreeView}}
+	{{template "repotree.html" .}}
 </div>
 {{end}}
 
