webapp: make cloning page title 'gorilla/mux - Sourcegraph' instead of 'Cloning - Sourcegraph - Sourcegraph'
Ref #6679

--- a/cmd/frontend/internal/app/templates/ui2/cloning.html
+++ b/cmd/frontend/internal/app/templates/ui2/cloning.html
@@ -1,4 +1,4 @@
-{{define "Title"}}Cloning - Sourcegraph{{end}}
+{{define "Title"}}{{.RepoShortName}}{{end}}
 
 {{define "Body"}}
 <div class="cloning" id="cloning">
