webapp: remove duplicate '- Sourcegraph' suffix from error page titles
Ref #6679

--- a/cmd/frontend/internal/app/templates/ui2/error.html
+++ b/cmd/frontend/internal/app/templates/ui2/error.html
@@ -19,7 +19,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>{{.StatusCode}} {{.StatusText}} - Sourcegraph</title>
+	<title>{{.StatusCode}} {{.StatusText}}</title>
 </head>
 <body>
 	<div class="error">
