webapp: move `- Sourcegraph` title suffix to Title template definition + make homepage title 'Sourcegraph' not 'Home - Sourcegraph'
Ref #6679

--- a/cmd/frontend/internal/app/templates/ui2/blob.html
+++ b/cmd/frontend/internal/app/templates/ui2/blob.html
@@ -1,4 +1,4 @@
-{{define "Title"}}{{.FileName}} - {{.RepoShortName}}{{end}}
+{{define "Title"}}{{.FileName}} - {{.RepoShortName}} - Sourcegraph{{end}}
 
 {{define "Body"}}
 <div class="blob">
