--- a/cmd/frontend/internal/app/templates/ui2/cloning.html
+++ b/cmd/frontend/internal/app/templates/ui2/cloning.html
@@ -1,4 +1,4 @@
-{{define "Title"}}{{.RepoShortName}}{{end}}
+{{define "Title"}}{{.RepoShortName}} - Sourcegraph{{end}}
 
 {{define "Body"}}
 <div class="cloning" id="cloning">
