--- a/cmd/frontend/internal/app/templates/ui2/shared/base.html
+++ b/cmd/frontend/internal/app/templates/ui2/shared/base.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>{{template "Title" .}} - Sourcegraph</title>
+	<title>{{template "Title" .}}</title>
 	<link rel="stylesheet" href="{{.AssetURL}}/fonts/MenloRegular.css">
 	<link rel="stylesheet" href="{{.AssetURL}}/scripts/ui/assets/dist/style.bundle.css?v6">
 	<!-- Start of Telligent scripts -->
