webapp: make search page title 'thequery - Sourcegraph' instead of 'Search - Sourcegraph'
Ref #6679

--- a/cmd/frontend/internal/app/templates/ui2/search.html
+++ b/cmd/frontend/internal/app/templates/ui2/search.html
@@ -1,4 +1,4 @@
-{{define "Title"}}Search - Sourcegraph{{end}}
+{{define "Title"}}{{.ShortQuery}} - Sourcegraph{{end}}
 
 {{define "Body"}}
 <div class="search">
