webapp: use media queries to make better use of screen real-estate
- Screens 0-1080px wide: now use 100% screen width instead of 960px;
    - I chose this because I assume anyone working on a small monitor for whatever reason will appreciate us not wasting their screen space.
- Screens 1080-1920px wide: now use 1080px instead of 960px;
    - I chose this 1080px number based on my local development environment, which I think is pretty stereotypical. I have Sublime open full-screen on a MBP, and can see ~90 characters in width of code. Sourcegraph now mirrors that (which I personally love).
- Screens >1920px wide: now use 1180px instead of 960px;
    - Feedback on this one appreciate! I assume that if someone makes Sourcegraph full-screen on a very wide monitor, they'll want it to use a lot of space (but probably not 100%). GitHub in this case uses 980px for their codeview, ours comes out 944px with the filetree expanded, and 1180px with file tree hidden.

![image](https://user-images.githubusercontent.com/3173176/29189295-ce9bb04a-7dca-11e7-967c-875732e556e9.png)

![image](https://user-images.githubusercontent.com/3173176/29189314-dd747e62-7dca-11e7-9dcc-826dcc4e2869.png)

![image](https://user-images.githubusercontent.com/3173176/29189332-eaa8b10c-7dca-11e7-8dc4-5ff14b082785.png)

![image](https://user-images.githubusercontent.com/3173176/29189781-a9da594e-7dcc-11e7-97f1-42de121bfddd.png)

Fixes #6674

/cc @rothfels

--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -49,9 +49,6 @@ $nav-height: 48px;
 		justify-content: center;
 
 		#navbar {
-			min-width: 960px;
-			max-width: 960px;
-
 			.spin:hover {	animation: spin 0.5s ease-in-out 1; }
 
 			@keyframes spin {
@@ -146,8 +143,28 @@ $nav-height: 48px;
 	$page-height: unquote("calc(100vh - #{$nav-height})");
 
 	background-color: #151D28;
-	width: 960px;
 	height: $page-height;
+}
+
+/* screens 0-1080px wide: 100% width */
+@media (min-width: 0px) and (max-width: 1080px) {
+	.blob, .cloning, .fancyerror, .repo, .search, .tree, .base #nav #navbar {
+		width: 100%;
+	}
+}
+
+/* screens 1080-1920px wide: 1080px wide */
+@media (min-width: 1080px) and (max-width: 1920px) {
+	.blob, .cloning, .fancyerror, .repo, .search, .tree, .base #nav #navbar {
+		width: 1080px;
+	}
+}
+
+/* screens >1920px: 1180px wide */
+@media (min-width: 1920px) {
+	.blob, .cloning, .fancyerror, .repo, .search, .tree, .base #nav #navbar {
+		width: 1180px;
+	}
 }
 
 // Define the "system" font family
@@ -211,7 +228,7 @@ $nav-height: 48px;
 		.right {
 			height: $tvc-height;
 			background-color: #151D28;
-			flex: 3;
+			flex: 4;
 		}
 	}
 
