webapp: update components

--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -312,7 +312,8 @@ $nav-height: 48px;
 			color: #31445E;
 			text-align: right;
 			font-size: .75em;
-			padding-right: .5em;
+			padding-left: .25em;
+			padding-right: .75em;
 			min-width: 3em;
 		}
 		.code-cell {
