webapp: add server-side syntax highlighting code
Note that the `dev/Procfile` is not 100% perfect, because of an existing Docker for Mac bug
which doesn't release the port bound by the mapping:

```
16:27:29 syntect_server | docker: Error response from daemon: driver failed programming external connectivity on endpoint vigilant_perlman (aed4bb4a1d7ebbaf984b392f5af3078113f97fd9ed0caf38c0efaf8af63256ab): Bind for 0.0.0.0:8000 failed: port is already allocated.
16:27:29 syntect_server | Terminating syntect_server
```

Seems to be issue https://github.com/docker/compose/issues/3277

This should be fixed in a future Docker for Mac version, and I do not expect
syntect_server to change often so working around the issue should be easy
enough.

--- a/cmd/frontend/internal/app/templates/ui2/blob.html
+++ b/cmd/frontend/internal/app/templates/ui2/blob.html
@@ -9,8 +9,7 @@
 	<div id="tree-view-container">
 		<div id="tree-viewer"></div>
 		<div class="blobview right">
-			<div id="blob">{{.BlobView.File}}</div>
-			<div id="blob-table"></div>
+			<div id="blob-table">{{.BlobView.Highlighted}}</div>
 			<div id="ref-widget"></div>
 		</div>
 	</div>
