--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -235,29 +235,28 @@ $nav-height: 48px;
         }
     }
 
-    .repotree {
-        /* Affects only repo.html and tree.html #tree-view-container */
-        .right {
+    .repotree>.right, .blobview-binary.right {
+        /* Affects repo.html and tree.html #tree-view-container */
+        /* Also affects blob.html when rendering binary file (just an icon saying binary files not supported) */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .top, .bottom {
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-
-            .top, .bottom {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
+        }
+        .top {
+            flex: 2;
+            >h1 {
+                margin-top: 1em;
             }
-            .top {
-                flex: 2;
-                >h1 {
-                    margin-top: 1em;
-                }
-            }
-            .bottom {
-                flex: 1;
-            }
+        }
+        .bottom {
+            flex: 1;
         }
     }
 }
