--- a/cmd/frontend/internal/app/web_modules/scss/app.scss
+++ b/cmd/frontend/internal/app/web_modules/scss/app.scss
@@ -540,10 +540,14 @@ $nav-height: 48px;
     }
 
     #search-widget {
-        flex: 10;
-        width: 512px;
+		flex: 10;
+		width: 600px;
+		max-width: 100vw;
         font-size: 14px;
-        color: #93A9C8;
+		color: #93A9C8;
+		width: 600px;
+		max-width: 100vw;
+		margin: 20px;
     }
 
     .footer {
