--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -40,6 +40,7 @@
 			overflow-x: hidden;
 			margin-left: -8px;
 			margin-right: -8px;
+			background-color: #1C2736;
 			&--open {
 				border-bottom-left-radius: 0;
 				border-bottom-right-radius: 0;
