Use a custom chips component

--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -1,81 +1,117 @@
 
 .search-box {
-	width: 100%;
-	font-size: 14px;
+	font-size: 12px;
 	color: #93A9C8;
+	padding: 0;
+	border-radius: 0.25rem;
+	box-shadow: 0px 0.25rem 0.5rem rgba(0, 0, 0, 0.32);
+	background-color: #1C2736;
+	padding-top: 0.5rem;
 
-	&-highlighted-query {
-		color: white;
+	.icon {
+		height: 1rem;
+		width: 1rem;
+		fill: currentColor;
+		text-align: center;
+		display: inline-block;
 	}
 
-	// Themed React AutoSuggest https://github.com/moroshko/react-autosuggest#theme-optional
-	// Class names use the BEM convention http://getbem.com/introduction/
-	.react-autosuggest__ {
-		&container {
-			width: 100%;
-			position: relative;
-			padding: 8px;
-			padding-bottom: 0;
-			background-color: #1C2736;
-			border-radius: 4px;
-			box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.32);
+	&-query {
+		display: flex;
+		flex-wrap: wrap;
+		background: #151D28;
+		border-radius: 2px;
+		margin-left: 0.5rem;
+		margin-right: 0.5rem;
+		padding-bottom: 0.25rem;
+		&-input, &-chip {
+			flex: 1 0 auto;
+			margin-top: 0.25rem;
+			margin-left: 0.25rem;
+			height: 1.5rem;
 		}
-		&input {
-			font-size: 14px;
-			height: 32px;
-			width: 100%;
-			padding: 8px;
+
+		&-input {
+			padding-left: 0.25rem;
+			background-color: transparent;
 			border: none;
-			background-color: #151D28;
+			outline: none;
 			color: white;
+			font-size: inherit;
+			&::-webkit-search-cancel-button {
+				display: none;
+			}
+			&::placeholder {
+				color: #93A9C8;
+			}
+		}
+
+		&-chip {
+			flex: 0 1 auto;
+			background-color: #2A3A51;
 			border-radius: 2px;
-			margin-bottom: 8px;
-			&--focused {
+			padding: 0.25rem 0.5rem;
+			color: white;
+			height: 1.5rem;
+			line-height: 1rem;
+			vertical-align: top;
+			&-text {
+				display: inline-block;
+				vertical-align: top;
+				margin-left: 0.5rem;
+			}
+			&-remove-button {
+				border: none;
 				outline: none;
+				background-color: transparent;
+				padding: 0;
+				margin-left: 0.25rem;
+				color: inherit;
+				cursor: pointer;
+				.icon {
+					fill: #93A9C8;
+					&:hover {
+						fill: white;
+					}
+				}
 			}
 		}
-		&suggestions-container {
-			max-height: 350px;
-			overflow-y: auto;
-			overflow-x: hidden;
-			margin-left: -8px;
-			margin-right: -8px;
-			background-color: #1C2736;
-			&--open {
-				border-bottom-left-radius: 0;
-				border-bottom-right-radius: 0;
-			}
-		}
-		&suggestions-list {
-			margin: 0;
-			padding: 0;
-			list-style-type: none;
-		}
-		&suggestion {
+	}
+
+	&-suggestions {
+		padding-top: 0.5rem;
+		&-item {
+			display: flex;
 			border-top: 1px solid #2A3A51;
 			cursor: pointer;
-			padding: 0 11px;
-			height: 32px;
-			line-height: 32px;
+			padding: 0 0.6875rem;
+			height: 2rem;
+			line-height: 2rem;
 			text-overflow: ellipsis;
 			white-space: nowrap;
 			overflow: hidden;
-			&--highlighted {
+			&-tip {
+				flex: 0 1 auto;
+			}
+			&-label {
+				flex: 1 0 auto;
+			}
+			&-selected {
 				background-color: #2A3A51;
 				&:last-child {
-					border-bottom-left-radius: 4px;
-					border-bottom-right-radius: 4px;
+					border-bottom-left-radius: 0.25rem;
+					border-bottom-right-radius: 0.25rem;
 				}
 			}
 			.icon {
-				height: 31px;
-				width: 18px;
-				text-align: center;
-				fill: currentColor;
-				display: inline-block;
-				vertical-align: top;
-				margin-right: 8px;
+				flex: 0 1 auto;
+				margin-right: 0.25rem;
+				height: 100%;
 			}
 		}
+	}
+
+	&-highlighted-query {
+		color: white;
 	}
 }
