--- a/web/src/search/_SearchBox.scss
+++ b/web/src/search/_SearchBox.scss
@@ -14,6 +14,10 @@
 		fill: currentColor;
 		text-align: center;
 		display: inline-block;
+		> svg {
+			width: 1rem;
+			height: 100%;
+		}
 	}
 
 	&-option {
@@ -46,7 +50,10 @@
 		&-search-icon {
 			flex: 0 0 auto;
 			margin-left: 0.5rem;
-			padding-top: 0.25rem;
+			margin-top: 0.5rem;
+			> .icon > svg {
+				height: auto;
+			}
 		}
 
 		&-chips {
@@ -100,7 +107,7 @@
 					background-color: transparent;
 					padding: 0;
 					margin-left: 0.25rem;
-					color: inherit;
+					color: #93A9C8;
 					cursor: pointer;
 					&:hover {
 						color: white;
@@ -116,7 +123,7 @@
 			display: flex;
 			border-top: 1px solid #2A3A51;
 			cursor: pointer;
-			padding: 0 0.6875rem;
+			padding: 0 1rem;
 			height: 2rem;
 			line-height: 2rem;
 			text-overflow: ellipsis;
@@ -137,7 +144,7 @@
 			}
 			.icon {
 				flex: 0 1 auto;
-				margin-right: 0.25rem;
+				margin-right: 0.5rem;
 				height: 100%;
 			}
 		}
